# PuppyOS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.6.1.43_vs_.config  index.css  index.html  service-worker.js  timer.css
.github/workflows/: ghpages.yaml
compositor/: Cargo.toml
compositor/desktop/: Cargo.toml
compositor/wayland/: Cargo.toml
compositor/wayland/src/: main.rs  smithay_backend.rs
ios/PuppyOS/: AppState.swift  ContentView.swift  EntryDetailView.swift  FileBrowserView.swift  GalleryView.swift  HamburgerMenuEnvironment.swift  NewEntryView.swift  Notifications.swift  PDFViewer.swift  Persistence.swift  PhotoSyncManager.swift  PhotoSyncSettings.swift  PhotoSyncView.swift  PuppyOSApp.swift  SideMenuView.swift  TabSwitchEnvironment.swift  TimersView.swift  TusUploader.swift
ios/PuppyOS.xcodeproj/: project.pbxproj
ios/PuppyOSTests/: PuppyOSTests.swift
ios/PuppyOSUITests/: PuppyOSUITests.swift  PuppyOSUITestsLaunchTests.swift
js/: accountant.js  app.js  calculator.js  calendar.js  chat.js  cmd_runner.js  common.js  desktop.js  editor.js  email.js  global.js  image_viewer.js  sheet.js  terminal.js  timer.js
linux/: .gitignore  Makefile  README.md  config-6.1.43-rockchip-rk3588
linux/kernel/: readme.md
linux/scripts/: assemble-image.sh  build-kernel.sh  build-rootfs.sh  build-uboot.sh  flash-rk.sh  install_dependencies.sh  make-opi-sd.sh  (+3 more)
src/: gui.rs  http_server.rs  main.rs  window.rs
static/: index.css  index.html  manifest.json  service-worker.js  timer.css
web/: index.html  package-lock.json  package.json  tsconfig.json
(+28 files in other folders)
