[package]
name = "PuppyOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.10"
simple_logger = "4"
log = { version = "0.4" }
anyhow = "1"
hyper-staticfile = "0.9.5"
mime_guess = "2"